# v16-fcs

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  template.env
.github/workflows/: deploy.yml  push_master.yml
fake_charging_station/: app.py  connector.py  custom_logger.py  fcs_v16.py  main.py  meter_values.py  session.py  settings.py
fake_charging_station/fcs_v16/: connector.py  fcs_v16.py  meter_values.py
tests/: conftest.py  test_endpoints.py
tests/integration_tests/: test_set_charging_profile.py  test_start_transaction.py
