[tool.poetry]
name = "fake-charging-station"
version = "0.1.0"
description = ""
authors = ["Erik Siebert <erik@switch-ev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.3"
websockets = "^10.0.0"
ocpp = "0.26.0"
fastapi = "^0.109.0"
uvicorn = {version = "^0.27.0", extras = ["standard"]}
pydantic = { extras = ["dotenv"], version = "^1.10.1" }

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.11.2"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
py_version = 311

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
disable_error_code = [
    "import-untyped",
    "no-any-unimported"
]
